# azums

./: .dockerignore  .gitignore  README.md
.github/workflows/: docker-build.yml  docker-publish.yml  k8s-deploy.yml  policy-tests.yml
.live-run-logs/: pids.json  run_ingress.ps1  run_proxy.ps1  run_status.ps1  run_worker.ps1
.live-run-logs/db-backups/: azums-20260305-205001.dump
apps/admin_cli/: Cargo.toml  README.md
apps/admin_cli/src/: main.rs
apps/ingress_api/: Cargo.toml  README.md
apps/ingress_api/src/: approval.rs  connector_binding.rs  grants.rs  main.rs  secret_crypto.rs
apps/operator_ui/: Cargo.toml  README.md
apps/operator_ui/src/: main.rs
apps/operator_ui/static/: app.js  index.html  styles.css
apps/operator_ui_next/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json
apps/operator_ui_next/app/: globals.css  layout.tsx  page.tsx
apps/operator_ui_next/components/: app-shell.tsx  customer-operator-page.tsx  internal-admin-page.tsx  operator-console.tsx  operator-exceptions-page.tsx
apps/operator_ui_next/lib/: app-state.ts  client-api.ts  flow.ts  plans.ts  types.ts  unified.ts
crates/adapter_contract/: Cargo.toml  README.md
crates/adapter_contract/src/: lib.rs
crates/adapter_paystack/: Cargo.toml  README.md
crates/adapter_paystack/src/: lib.rs
crates/adapter_solana/: Cargo.toml  README.md  gen_tx.mjs  package-lock.json  package.json
crates/adapter_solana/src/: lib.rs
crates/auth/: Cargo.toml  README.md
crates/auth/src/: lib.rs
crates/callback_core/: Cargo.toml  README.md
crates/callback_core/src/: dispatcher.rs  error.rs  lib.rs  model.rs  postgresq.rs
crates/config/: README.md
crates/config/profiles/: dev-compose.env.example  local.env.example  production.env.template
crates/config/services/: evm_adapter.env.example  execution_worker.env.example  ingress_api.env.example  operator_ui.env.example  reverse_proxy.env.example  solana_adapter.env.example  status_api.env.example  (+1 more)
crates/exception_intelligence/: Cargo.toml
crates/exception_intelligence/src/: classifier.rs  error.rs  lib.rs  model.rs  store.rs
crates/execution_core/: Cargo.toml  README.md
crates/execution_core/src/: engine.rs  error.rs  lib.rs  model.rs  policy.rs  ports.rs
crates/execution_core/src/integration/: mod.rs  postgresq.rs
crates/execution_core/tests/: execution_core.rs
crates/observability/: Cargo.toml  README.md  observability.env.example  prometheus-rules.example.yml
crates/observability/src/: lib.rs
crates/recon_core/: Cargo.toml
crates/recon_core/examples/: benchmark_solana_recon.rs
crates/recon_core/src/: engine.rs  error.rs  intake.rs  lib.rs  model.rs  paystack_rules.rs  postgres.rs  rules.rs  worker.rs
crates/recon_core/tests/: solana_recon_rule_pack.rs
crates/rpc_layer/: Cargo.toml  README.md
crates/rpc_layer/src/: lib.rs  provider.rs  solana.rs
crates/shared_types/: Cargo.toml  README.md
crates/status_api/: Cargo.toml  README.md
crates/status_api/src/: api.rs  auth.rs  error.rs  lib.rs  main.rs  model.rs  replay.rs  store.rs
deployments/compose/: Dockerfile.rust-node  README.md  docker-compose.yml  payer-id.json
deployments/docker/: .dockerignore  Dockerfile  Dockerfile.next  README.md  build-images.ps1  build-images.sh  docker-compose.images.yml
deployments/k8s/: README.md  configmap.platform.yaml  execution-callback-worker.yaml  execution-worker.yaml  ingress-api.yaml  ingress-public.yaml  kustomization.yaml  namespace.yaml  operator-ui-backend.yaml  operator-ui.yaml  postgres.yaml  reverse-proxy.yaml  secret.example.yaml  status-api.yaml
docs/: PLATFORM_DOCUMENTATION.md  README.md  production-gap-closure-checklist.md  v1-proof-checklist.md
docs/adrs/: ADR-0001-reconciliation-and-exception-intelligence-downstream-bounded-subsystems.md  ADR-0002-generic-reconciliation-framework-with-adapter-specific-rule-packs.md  ADR-0003-adapter-conformance-across-execution-and-reconciliation.md  ADR-0004-agent-and-api-entry-surfaces-converge-into-one-execution-path.md  README.md
docs/architecture/: README.md  component-boundaries.md  data-flow.md  entry-paths.md  exception-intelligence-index-v1.md  reconciliation-engine-v1.md  reconciliation-integration-spec.md  reconciliation-storage-and-intake.md  system-overview.md
docs/contracts/: README.md  adapter-contract.md  adapter-integration-playbook.md  exception-subcode-guidance.md  exception-taxonomy-v1.md  lifecycle-state-machine.md  platform-contract.md  recon-rule-pack-template.md  reconciliation-contract-v1.md  solana-reconciliation-rule-pack-v1.md
docs/receipts/: README.md  receipt-examples.md  receipt-schema.md  reconciliation-upgrade.md
docs/roadmaps/: README.md  reconciliation-and-exception-roadmap.md
docs/runbooks/: README.md  benchmark-runbook.md  incident-runbook.md  local-compose-proof-runbook.md  operator-runbook.md  public-edge-verification-runbook.md  reconciliation-backfill-runbook.md  reconciliation-benchmark-report-template.md  reconciliation-false-positive-review-log.md  reconciliation-launch-readiness-checklist.md  reconciliation-rollout-runbook.md  replay-runbook.md
examples/: README.md
examples/solana_flow/: README.md  callback-destination.json  replay-request.json  run.ps1  run.sh  submit-request.json
examples/webhook_to_solana/: README.md  run.ps1  run.sh  webhook-payload.json
plans/: ui-modernization-plan.md
scripts/: apply_production_runtime.ps1  backfill_reconciliation_intake.ps1  benchmark_platform.ps1  benchmark_reconciliation_rollout.ps1  check_platform_health.ps1  check_production_readiness.ps1  db_backup_restore_drill.ps1  freeze_runtime.ps1  inspect_dispatch_pickup_tail.ps1  prove_api_key_create_submit_revoke.ps1  prove_api_key_create_submit_revoke.sh  prove_quota_submit_enforcement.ps1  prove_quota_submit_enforcement.sh  redeploy_latest_images.ps1  report_reconciliation_rollout.ps1  rotate_platform_secrets.ps1  run_crash_injection.ps1  run_full_flow.ps1  verify_billing_endpoints.ps1  verify_public_edge_surfaces.ps1  verify_ui_smoke.ps1
(+117 files in other folders)
