[package]
name = "ingress_api"
version = "0.1.0"
edition = "2021"

[dependencies]
adapter_contract = { path = "../../crates/adapter_contract" }
anyhow = "1"
aes-gcm = "0.10"
axum = { version = "0.7", features = ["json"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
execution_core = { path = "../../crates/execution_core", features = ["postgresq"] }
hex = "0.4"
hmac = "0.12"
observability = { path = "../../crates/observability" }
platform_auth = { path = "../../crates/auth" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
sha2 = "0.10"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "postgres"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
