[package]
name = "operator_ui"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Operator dashboard for durable execution platform status and controls."

[dependencies]
axum = { version = "0.7", features = ["json"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shared_types = { path = "../../crates/shared_types" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
