[package]
name = "adapter_paystack"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Paystack adapter implementation for execution_core."

[dependencies]
adapter_contract = { path = "../adapter_contract" }
anyhow = "1"
async-trait = "0.1"
execution_core = { path = "../execution_core" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
tokio = { version = "1", features = ["sync"] }
uuid = { version = "1", features = ["v4", "serde"] }
