[package]
name = "adapter_solana"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Solana adapter implementation for execution_core."

[dependencies]
adapter_contract = { path = "../adapter_contract" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
execution_core = { path = "../execution_core" }
rpc_layer = { path = "../rpc_layer" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
tokio = { version = "1", features = ["time"] }
uuid = { version = "1", features = ["v4", "serde"] }
