[package]
name = "callback_core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Durable callback and delivery core for execution outcomes."

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
execution_core = { path = "../execution_core" }
hex = "0.4"
hmac = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "macros"] }
thiserror = "2"
tokio = { version = "1", features = ["time"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
