[package]
name = "exception_intelligence"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Downstream exception intelligence store and taxonomy for Azums reconciliation."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "postgres", "uuid", "json"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
