[package]
name = "execution_core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Canonical execution lifecycle and policy core."

[features]
default = []
postgresq = ["dep:chrono", "dep:reqwest", "dep:sqlx", "dep:tokio"]

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", optional = true, features = ["serde"] }
reqwest = { version = "0.12", optional = true, default-features = false, features = ["json", "rustls-tls"] }
sqlx = { version = "0.7", optional = true, default-features = false, features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "macros"] }
tokio = { version = "1", optional = true, features = ["macros", "rt-multi-thread", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
