[package]
name = "rpc_layer"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "RPC/provider transport abstraction layer for adapters."

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
